@@ -2,6 +2,7 @@
 
 	* tiny/tinydebian.el (tinydebian-bts-parse-string-1): Delete
 	trailing ")" that usually appear in returned BTS messages.
+	(tinydebian-bts-mail-type-rfp): Add support for direct ITP.
 
 2010-05-23 Sun  Jari Aalto  <jari.aalto@cante.net>
 
